# chem-rdkit-tutorial

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-getting-started.ipynb  01-molecular-representations.ipynb  02-molecular-visualization.ipynb  03-molecular-descriptors.ipynb  04-substructure-searching.ipynb  05-fingerprints-and-similarity.ipynb  06-chemical-reactions.ipynb  07-3d-conformers.ipynb  08-molecular-datasets.ipynb  09-drug-likeness-filters.ipynb  10-cheminformatics-workflows.ipynb  11-exercises.ipynb  12-atom-feature-vector.ipynb  13-3d-molecular-representations.ipynb  14-graph-laplacian-spectrum.ipynb
