[project]
name = "chem-rdkit"
version = "0.1.0"
description = "Learning chemistry with RDKit"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rdkit",
    "jupyterlab",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "jupyterlab-vim>=4.1.4",
]
