[project]
name = "chem-rdkit"
version = "0.1.0"
description = "Learning chemistry with RDKit"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "rdkit",
    "jupyterlab",
    "pandas",
    "matplotlib",
    "seaborn",
    "scikit-learn",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "isort>=8.0.1",
    "jupyterlab-code-formatter>=3.0.3",
    "jupyterlab-vim>=4.1.4",
]
